--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
 			</form>
 			<h4>New user?<a href = "/register"> Register!</a></h4>
 		</div>
-		<div class = "col-3" id = "investmentContainer">
+		<div class = "col-3">
 			
 		</div>
 	</div>
