--- a/views/register.ejs
+++ b/views/register.ejs
@@ -28,7 +28,7 @@
 			</form>
 			<h4> Already a user? <a href = "/login">Login!</a></h4>
 		</div>
-		<div class = "col-3" id = "investmentContainer">
+		<div class = "col-3">
 			
 		</div>
 	</div>
