--- a/views/sorted.ejs
+++ b/views/sorted.ejs
@@ -1,5 +1,36 @@
 <% include ./partials/header.ejs %>
 
+<div class="modal fade" id="trackItemModal" tabindex="-1" aria-labelledby="trackItemModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="trackItemModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class = "container itemtab">
+            <form id = "investmentForm" method = 'POST'>
+                <div>
+                    <span>x</span> <input name = 'quantity' type = 'number' min = 1 required value = 1><span id = "investmentName"></span>
+                </div>
+                <div>
+                    <span style="font-size: .8rem">@</span><input name = 'pricePerItem' type = 'number' value = '' min = 1 required> <span>gp each</span>
+                </div>
+                <div>
+                    Total Price: <span id = 'totalPrice'> 0 gp </span>
+                </div>
+                <button class = "btn-outline-dark btn">Track</button>
+                <input class = 'd-none' name = 'lastUpdated'>
+                <input class = 'd-none' name = 'itemPrice'>
+            </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class = "container-fluid pb-5">
     <div class = "row">
         <div class = "col-3" id = "optionContainer"> 
@@ -25,7 +56,7 @@
                             </p>
                             <p> 
                                 <input type="radio" name = "typeSort" value="weightedSort"> weighted values
-                                <button type="button" class="btn btn-light btn-sm" data-container="body" data-toggle="tooltip" data-placement="right" title="weighted values (adjusted by you) are compared instead of the raw value, must select a value to sort by before toggling" style="border:none; background-color: white">
+                                <button type="button" class="btn btn-light btn-sm" data-container="body" data-toggle="tooltip" data-placement="right" title="values are weighted (adjusted by you) before being compared instead of just the raw value, must select a value to sort by before toggling" style="border:none; background-color: white">
                                     <i class="fa fa-info-circle"></i>
                                 </button>
                             </p>
@@ -120,13 +151,22 @@
                     <tr class = "item d-none">
                         <td> 
                             <% if (user) { %>
-                                <button class = "additem btn btn-outline-dark" 
+                                <!-- <button class = "additem btn btn-outline-dark" 
                                 data-item-name = "<%= items[i].name %>" 
                                 data-item-name-lower = "<%= items[i].name_lower %>" 
                                 data-item-price = "<%= items[i].statdata.currentPrice.price %>"
                                 data-item-updated = "<%= items[i].lastUpdated.valueOf() %>"
                                 data-item-id = "<%= items[i].id %>">
                                     <i class = "fa fa-plus"> </i> 
+                                </button> -->
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-outline-dark btn-sm additem"
+                                data-item-name = "<%= items[i].name %>" 
+                                data-item-name-lower = "<%= items[i].name_lower %>" 
+                                data-item-price = "<%= items[i].statdata.currentPrice.price %>"
+                                data-item-updated = "<%= items[i].lastUpdated.valueOf() %>"
+                                data-item-id = "<%= items[i].id %>">
+                                  <i class = "fa fa-plus"> </i> 
                                 </button>
                             <% } %>
                             <img src = "/images/small/<%=items[i].id%>.gif">
@@ -153,7 +193,7 @@
                         <% } %>
                     </tr>
                 <% } %>
-                <% for(i; i < Math.ceil((items.length) / 10) * 10; i++) {%>
+                <% for(i; i < Math.ceil((items.length) / 10) * 10; i++) {%> <!-- pad last page of table -->
                     <tr class = "item d-none invisible">
                         <td> 
                             <% if (user) { %>
@@ -209,16 +249,18 @@
       
         </div>
         <div class = "col-3">
-            <div class = "invisible">
-                invisible
-            </div>
-            <h5 class = "border-bottom">
-                Tracked Items
-            </h5>   
-            <div id = "investmentContainer">
-                <% include ./partials/profits.ejs %>
-                <% include ./partials/losses.ejs %>
-            </div>
+            <% if (user){ %>
+                <div class = "invisible">
+                    invisible
+                </div>
+                <h5 class = "border-bottom">
+                    Tracked Items
+                </h5>   
+                <div id = "investmentContainer">
+                    <% include ./partials/profits.ejs %>
+                    <% include ./partials/losses.ejs %>
+                </div>
+            <% } %>
         </div>
     </div>
 </div>
@@ -234,22 +276,14 @@
         var lastUpdated = $(this).data().itemUpdated;
         var itemId = $(this).data().itemId;
         
-        var form = $(
-                    "<div class = 'container itemtab'>" +
-                        "<form method = 'POST' action = '/item/add/" + itemId + "/" + window.location.href.split("/").join("_").split("?").join("-") + "'>" +
-                            "<h1>" + itemName + " (" + itemPrice + "gp each)</h1>" +
-                            "<h3> quantity </h3>" +
-                            "<input name = 'quantity' type = 'number' min = 1 required>" +
-                            "<h3> price per item</h3>" +
-                            "<input name = 'pricePerItem' type = 'number' value = '" + itemPrice + "' min = 1 required>" +
-                            "<h3> Total Price </h3>" +
-                            "<span id = 'totalPrice'> 0 gp </span>" +
-                            "<input class = 'd-block' type = 'submit'>" +
-                            "<input class = 'd-none' name = 'lastUpdated' value = '" + lastUpdated + "''>" +
-                            "<input class = 'd-none' name = 'itemPrice' value = '" + itemPrice + "''>" +
-                        "</form>" +
-                    "</div>"
-                    ).appendTo($("body"));
+        $("#trackItemModalLabel").html("<img src = /images/small/" + itemId + ".gif> " + itemName);
+        $("input[name='pricePerItem']").val(itemPrice);
+        $("input[name='lastUpdated']").val(lastUpdated);
+        $("input[name='itemPrice']").val(itemPrice);
+        $("#totalPrice").text(itemPrice);
+        $("#investmentName").text(itemName + "(s)");
+        $("#investmentForm").attr("action", "/item/add/" + itemId + "/" + window.location.href.split("/").join("_").split("?").join("-"));
+
 
         $(".itemtab input").on("input", function()
         {
@@ -261,20 +295,8 @@
             }
         });
 
-        form.focusout(function (event)
-        {
-            var form = $(this);
-            setTimeout(function () {
-                if (form.find(':focus').length === 0)
-                {
-                    form.remove();
-                }
-            }); 
-        });
-
-        $("input[name='quantity']").focus();
+        $('#trackItemModal').modal('show');
     });
-
 </script>
 
 
